| Summary: | ASTERISK-27369: Bridge() dialplan application fails without setting BRIDGERESULT channel variable | ||||
| Reporter: | James Terhune (bigjimmy) | Labels: | |||
| Date Opened: | 2017-10-23 13:36:24 | Date Closed: | 2017-11-01 08:02:37 | ||
| Priority: | Minor | Regression? | No | ||
| Status: | Closed/Complete | Components: | Core/Bridging | ||
| Versions: | 13.17.2 | Frequency of Occurrence | Frequent | ||
| Related Issues: |
| ||||
| Environment: | Ubuntu 16.04 | Attachments: | ( 0) 13_channel_bridge_retval | ||
| Description: | When using the Bridge() application where the target channel is already in a bridge, the BRIDGERESULT channel variable doesn't get set.
This is because the return variable of ast_bridge_join() is never checked. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2017-10-23 13:36:24.784-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: James Terhune (bigjimmy) 2017-10-23 13:37:39.402-0500 This patch sets the return variable to FAILURE when the bridge fails. By: Kevin Harwell (kharwell) 2017-10-23 18:03:34.335-0500 Thanks for the contribution! If you'd like your contribution to be included faster, you should submit your patch for code review by the Asterisk Developer Community. To do so, please follow the Code Review [1] instructions on the wiki. Be sure to: * Verify that your patch conforms to the Coding Guidelines [2] * Review the Code Review Checklist [3] for common items reviewers will look for * If necessary, provide tests for the Asterisk Test Suite that verify the correctness of your patch [4] When ready, submit your patch and any tests to Gerrit [5] for code review. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Code+Review [2] https://wiki.asterisk.org/wiki/display/AST/Coding+Guidelines [3] https://wiki.asterisk.org/wiki/display/AST/Code+Review+Checklist [4] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Test+Suite+Documentation [5] https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage By: Friendly Automation (friendly-automation) 2017-11-01 08:02:37.765-0500 Change 6946 merged by Jenkins2: features: Bridge application's BRIDGERESULT not appropriately set [https://gerrit.asterisk.org/6946|https://gerrit.asterisk.org/6946] By: Friendly Automation (friendly-automation) 2017-11-01 08:08:31.967-0500 Change 6947 merged by Jenkins2: features: Bridge application's BRIDGERESULT not appropriately set [https://gerrit.asterisk.org/6947|https://gerrit.asterisk.org/6947] By: Friendly Automation (friendly-automation) 2017-11-01 09:23:04.186-0500 Change 6948 merged by Joshua Colp: features: Bridge application's BRIDGERESULT not appropriately set [https://gerrit.asterisk.org/6948|https://gerrit.asterisk.org/6948] | ||||